# YieldNet

./: CLAUDE.md
deploy/etc/cyclonedds/: bridge.xml  internal.xml
deploy/etc/fleet/: domain_bridge.yaml
deploy/etc/systemd/system/: fleet-domain-bridge.service
docs/execution-plans/: Task-Board.md
docs/execution-plans/01-M4-Multi-robot/: README.md
docs/notion-sync/: FleetGuard · 多机避撞协同系统.md  多机避撞协同系统 · PRD.md  多机避撞协同系统 · 系统架构设计.md  多机避撞协同系统-架构评审报告.md  多机避撞协同系统-测试方案与设计.md
docs/reports/: S0-baseline-audit.md  S1-integration-contract.md  S1-merge-to-master.md  S1B-nav2-speedlimit-validation.md  S3-M3-scenario-test-report.md  S3-M3-scenario-test.md
docs/se/: Master_RTM.json
ros2_ws/: .gitignore
ros2_ws/src/fleet_coordination/: package.xml  setup.py
ros2_ws/src/fleet_coordination/fleet_coordination/: cmd_vel_to_odom.py  fleet_coordinator.py  fleet_speed_controller.py  peer_state.py
ros2_ws/src/fleet_coordination/launch/: fleet_bringup.launch.py
ros2_ws/src/fleet_coordination/test/: __init__.py  test_path_conflict.py  test_priority.py  test_state_machine.py
ros2_ws/src/fleet_gazebo/: package.xml  setup.py  test_fleet.sh  test_full.sh
ros2_ws/src/fleet_gazebo/fleet_gazebo/: __init__.py  merge_nav2_fleet_params.py
ros2_ws/src/fleet_gazebo/launch/: gazebo_corridor.launch.py  spawn_robots.launch.py
ros2_ws/src/fleet_gazebo/scripts/: collect_nav2_e2e_topics.py  compute_path_probe.py  judge_nav2_e2e_safety.py  mock_path_publisher_all.py  move_robots_corridor_two.py  move_robots_to_center.py  nav_test_3robots.py  performance_test.sh  run_m3_nav2_e2e_yield.sh  run_m3_scenario_test.sh  send_nav2_goal.py  start_mock_paths.sh  test_multi_robot.sh  test_multi_robot_with_nav.sh  write_corridor_map.py  write_rsp_params.py
ros2_ws/src/fleet_gazebo/worlds/: corridor.world  t_intersection.world
ros2_ws/src/fleet_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/fleet_msgs/msg/: PlannedPath.msg  RobotHeartbeat.msg  RobotPose.msg  YieldCommand.msg
ros2_ws/src/fleet_nav2_bt/: CMakeLists.txt  package.xml  plugin_descriptions.xml
ros2_ws/src/fleet_nav2_bt/behavior_trees/: navigate_default_follow_path.xml  navigate_goal_updated_follow_path.xml  navigate_with_conflict_check.xml  navigate_with_fleet.xml  navigate_with_speed.xml
ros2_ws/src/fleet_nav2_bt/include/fleet_nav2_bt/: adjust_speed_for_fleet.hpp  bt_ros_host_utils.hpp  check_fleet_conflict.hpp  wait_for_yield_clear.hpp
ros2_ws/src/fleet_nav2_bt/launch/: fleet_nav2_bt_launch.py
ros2_ws/src/fleet_nav2_bt/src/: adjust_speed_for_fleet.cpp  check_fleet_conflict.cpp  fleet_bt_runner.cpp  wait_for_yield_clear.cpp
