<?xml version="1.0"?>
<package format="2">
  <name>fleet_coordination</name>
  <version>0.1.0</version>
  <description>Multi-robot Fleet Collision Avoidance Coordination</description>
  <maintainer email="guolinlin@hotmail.com">guolinlin</maintainer>
  <license>Apache-2.0</license>
  <build_type>ament_python</build_type>
  <exec_depend>rclpy</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>fleet_msgs</depend>
</package>
