<?xml version="1.0"?>
<package format="2">
  <name>fleet_gazebo</name>
  <version>0.1.0</version>
  <description>Fleet Collision Avoidance Gazebo Simulation</description>
  <maintainer email="guolinlin@hotmail.com">guolinlin</maintainer>
  <license>Apache-2.0</license>
  <build_type>ament_python</build_type>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>fleet_nav2_bt</exec_depend>
  <exec_depend>fleet_coordination</exec_depend>
  <exec_depend>fleet_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
</package>
